correction alignement card format dektop

--- a/style/desktopstyle.scss
+++ b/style/desktopstyle.scss
@@ -8,6 +8,7 @@ body {
 
 .card {
   display: flex;
+  align-items: flex-end;
   height: auto;
   padding: 0 10%;
   margin-top: 19rem;
